--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,38 @@
         <activity android:name=".SecondActivity"></activity>
         <service android:name=".ScheduleService" />
         <service android:name=".NotifyService" />
+        <service
+            android:name=".WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <service android:name=".FetchService" />
+        <!--
+    Configuration activity which gets launched  on widget being
+    placed on homescreen for first time
+-->
+        <activity android:name=".ConfigActivity" >
+
+            <!--
+                 This intent is required to be recognized
+                 this activity as appwidget configuration activity
+            -->
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
+        <receiver android:name=".WidgetProvider" >
+            <intent-filter>
+
+                <!-- This widget provider receives broadcast with following action
+    name or simply onUpdate of AppWidgetProvider is called -->
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <!-- To receive broadcast with this string name -->
+                <action android:name="com.yahasvi.cloudmagic.DATA_FETCHED" />
+            </intent-filter>
+            <!-- linking up xml file of appwidget-provider to AppWidgetProvider -->
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widgetinfo" />
+        </receiver>
     </application>
 
 </manifest>
